--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -49,7 +49,7 @@ html {
 body {
   font-size: inherit;
   font-family: "IBM Plex Sans", sans-serif;
-  position: relative;
+  // position: relative;
   background-color: rgb(17, 16, 16);
   background-color: #0e0e0e;
 
