--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -21,6 +21,12 @@
       border: none;
       border-radius: 0.5rem;
       background-color: #f32d58;
+      transition: color 0.2s;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #c42345;
+      }
     }
   }
   &-content {
@@ -36,13 +42,61 @@
 
 .list {
   &-card {
+    position: relative;
+    background-color: #1f1e1e6e;
     border-radius: 0.5rem;
     overflow: hidden;
     &--cover {
+      height: 35.5rem;
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+      &-noImg {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        & * {
+          font-size: 6rem;
+          color: white;
+        }
+      }
+
       & img {
         width: 100%;
+      }
+    }
+
+    &--overlay {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.815);
+      height: 100%;
+      width: 100%;
+
+      &-wrapper {
+        position: relative;
+        height: 100%;
+        width: 100%;
+        &-pencil {
+          font-size: 5.5rem;
+          color: white;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+
+        &-dots {
+          font-size: 3rem;
+          color: white;
+          position: absolute;
+          top: 0;
+          right: 3%;
+        }
       }
     }
   }
@@ -50,6 +104,10 @@
     color: white;
     font-size: 1.6rem;
     margin-top: 1rem;
+  }
+
+  &:hover &-card--overlay {
+    display: block;
   }
 }
 
@@ -137,6 +195,123 @@
 
       &-content {
         color: white;
+      }
+    }
+  }
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.733);
+  z-index: 100000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &-card {
+    padding: 2rem;
+    width: 50rem;
+    background-color: #121213;
+    border-radius: 0.5rem;
+    border: 0.1rem solid rgb(32, 32, 32);
+    box-shadow: 0 0 5rem 5rem rgba(0, 0, 0, 0.226);
+
+    &--header {
+      display: flex;
+      align-items: center;
+      position: relative;
+      &-label {
+        flex: 1;
+        text-align: center;
+        font-size: 2rem;
+        font-weight: 500;
+        color: white;
+      }
+
+      &-close {
+        position: absolute;
+        right: 0;
+        background-color: transparent;
+        border: none;
+        display: flex;
+        color: rgb(112, 112, 112);
+        font-size: 2rem;
+        transition: color 0.1s;
+        cursor: pointer;
+        &:hover {
+          color: white;
+        }
+      }
+    }
+
+    &--content {
+      &-nameWrapper {
+        margin-top: 3rem;
+
+        &-name {
+          color: gray;
+          font-size: 1.7rem;
+          margin-bottom: 0.5rem;
+        }
+
+        &-input {
+          width: 100%;
+          padding: 1rem 1rem;
+          border-radius: 0.5rem;
+          border: none;
+          color: rgb(71, 71, 71);
+          font-size: 1.5rem;
+          font-family: inherit;
+
+          &::placeholder {
+            color: rgb(158, 158, 158);
+          }
+        }
+      }
+
+      &-descWrapper {
+        margin-top: 2rem;
+        &-desc {
+          color: gray;
+          font-size: 1.7rem;
+          margin-bottom: 0.5rem;
+        }
+
+        &-textarea {
+          width: 100%;
+          padding: 1rem 1rem;
+          border-radius: 0.5rem;
+          border: none;
+          color: rgb(71, 71, 71);
+          font-size: 1.5rem;
+          font-family: inherit;
+          resize: none;
+
+          &::placeholder {
+            color: rgb(158, 158, 158);
+          }
+        }
+      }
+
+      &-btn {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+
+        & button {
+          background-color: #f32d58;
+          border: none;
+          padding: 1rem 2rem;
+          border-radius: 0.5rem;
+          font-size: 1.6rem;
+          font-weight: 500;
+          font-family: inherit;
+          color: white;
+          margin-top: 2rem;
+        }
       }
     }
   }
