--- a/src/styles/movie.scss
+++ b/src/styles/movie.scss
@@ -82,7 +82,7 @@
     &--img {
       margin-top: 1.3rem;
       width: 100%;
-      height: 55rem;
+      // height: 55rem;
       background-color: rgba(27, 27, 27, 0.404);
       display: flex;
       justify-content: center;
