--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -60,6 +60,7 @@ body {
 .container {
   width: 100%;
   height: 100vh;
+
   // display: flex;
   // @media only screen and (max-width: $bp-m) {
   //   width: 100%;
@@ -74,6 +75,8 @@ body {
   max-width: 140rem;
   margin: auto;
   height: 100%;
+  padding: 0 1.5rem;
+
   // @media only screen and (max-width: $bp-m) {
   //   padding: 1rem 4rem;
   // }
@@ -163,6 +166,11 @@ body {
   justify-content: space-between;
   padding: 0.5rem;
   border-radius: 0.3rem;
+
+  @media only screen and (max-width: 27rem) {
+    display: none;
+  }
+
   &-left {
     // margin-left: 1rem;
     // left: 100%;
@@ -198,7 +206,6 @@ body {
 }
 
 .signature {
-  // margin-top: 7rem;
   display: flex;
   align-items: center;
 
