--- a/src/styles/SectionPage.scss
+++ b/src/styles/SectionPage.scss
@@ -20,7 +20,7 @@
     &_movies {
       width: 100%;
       display: grid;
-      grid-template-columns: repeat(6, 1fr);
+      grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
       // grid-auto-rows: 33rem;
       // grid-column-gap: .5rem;
     }
