--- a/src/styles/bar.scss
+++ b/src/styles/bar.scss
@@ -34,6 +34,7 @@ $bp-m: 64.8rem;
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    padding: 0 1.5rem;
   }
   &-list {
     // flex: 1;
@@ -134,6 +135,10 @@ $bp-m: 64.8rem;
   // overflow: hidden;
 
   &-search {
+    @media only screen and (max-width: 27rem) {
+      display: none;
+    }
+
     display: flex;
     align-items: center;
     // width: 30.5rem;
