--- a/src/styles/movie.scss
+++ b/src/styles/movie.scss
@@ -1,3 +1,9 @@
+.trailer {
+  display: none;
+  @media only screen and (max-width: 65rem) {
+    display: block;
+  }
+}
 .movie {
   color: white;
   margin-top: 3rem;
@@ -6,11 +12,21 @@
   &-content {
     justify-content: space-between;
     display: flex;
+
+    @media only screen and (max-width: 65rem) {
+      flex-direction: column-reverse;
+    }
   }
   &-mainSection {
+    @media only screen and (max-width: 65rem) {
+      width: 100%;
+    }
     width: 75%;
 
     &--header {
+      @media only screen and (max-width: 65rem) {
+        width: 100%;
+      }
       width: 75%;
       display: flex;
       justify-content: space-between;
@@ -124,13 +140,21 @@
   &-secondarySection {
     margin-top: 1rem;
     width: 22%;
+
+    @media only screen and (max-width: 65rem) {
+      width: 100%;
+    }
+
     &-content {
       // background-color: #1b1b1b48;
-      padding: 0rem 1rem;
+      padding: 0rem 0rem;
       border-radius: 0.4rem;
       position: relative;
     }
     &--genres {
+      @media only screen and (max-width: 65rem) {
+        margin-top: 2rem;
+      }
       &-list {
         margin-top: 1.5rem;
         margin-bottom: 1rem;
@@ -192,6 +216,11 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+
+      @media only screen and (max-width: 65rem) {
+        flex-direction: column;
+      }
+
       &-header {
         font-size: 2rem;
         color: gray;
@@ -216,6 +245,11 @@
         justify-content: space-between;
         margin-top: 4rem;
         position: relative;
+
+        @media only screen and (max-width: 65rem) {
+          margin-bottom: 4rem;
+          margin-top: 2rem;
+        }
       }
     }
   }
@@ -232,7 +266,7 @@
 
   &-section {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
     grid-gap: 1rem;
   }
 
