--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -60,6 +60,10 @@ $bp-mobile: 27rem;
           font-size: 4rem;
           font-weight: 500;
           width: 60%;
+
+          @media only screen and (max-width: 33rem) {
+            font-size: 3rem;
+          }
         }
 
         &__overview {
